--- a/style.css
+++ b/style.css
@@ -28,6 +28,19 @@ h3 {
   font-size: 24px;
   opacity: 0.7;
 }
+@media (max-width: 576px) {
+  h1 {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+  h2 {
+    font-size: 32px;
+    text-align: center;
+  }
+  p {
+    text-align: center;
+  }
+}
 
 p {
   background: var(--secondary-color);
@@ -92,4 +105,17 @@ p {
 .btn-color {
   color: #fff;
   background-color: #6c63ff;
+}
+@media (max-width: 576px) {
+  h1 {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+  h2 {
+    font-size: 32px;
+    text-align: center;
+  }
+  p {
+    text-align: center;
+  }
 }
